@@ -83,7 +83,7 @@ UNISTD_SRCS	+=  lib_chdir.c lib_getcwd.c
 endif
 endif
 
-TIME_SRCS	= lib_mktime.c lib_gmtimer.c lib_timeutils.c
+TIME_SRCS	= lib_mktime.c lib_gmtime.c lib_gmtimer.c lib_timeutils.c
 
 NET_SRCS	= lib_htons.c lib_htonl.c lib_inetntoa.c lib_etherntoa.c
 
